--- a/project-metaverse.html
+++ b/project-metaverse.html
@@ -37,6 +37,8 @@
       <button id="btnReset">重設視角</button>
     </div>
 
+    <p id="errorMsg" style="color:red; font-weight:bold; margin-top:10px;"></p>
+
     <h2 style="margin-top:30px;">Sketchfab 模型範例</h2>
     <div id="sampleContainer" style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:15px;"></div>
   </main>
@@ -69,6 +71,13 @@
       document.addEventListener("keydown", e => keys[e.key] = true);
       document.addEventListener("keyup", e => keys[e.key] = false);
 
+      // === 預設模型 (即使 API 失敗也能看到效果) ===
+      const defaultGeo = new THREE.BoxGeometry(1, 1, 1);
+      const defaultMat = new THREE.MeshStandardMaterial({ color: 0x00ffcc });
+      const defaultCube = new THREE.Mesh(defaultGeo, defaultMat);
+      defaultCube.position.set(0, 0.5, 0);
+      scene.add(defaultCube);
+
       function addCube() {
         const geometry = new THREE.BoxGeometry(1, 1, 1);
         const material = new THREE.MeshStandardMaterial({ color: Math.random() * 0xffffff });
@@ -85,19 +94,27 @@
         scene.add(sphere);
       }
 
+      function showError(msg) {
+        document.getElementById("errorMsg").textContent = msg;
+      }
+
       function loadModel() {
         const url = document.getElementById("modelUrl").value.trim();
         if (!url) {
-          alert("請輸入模型 URL");
+          showError("請輸入模型 URL");
           return;
         }
+
+        showError("模型載入中...");
+
         const loader = new THREE.GLTFLoader();
         loader.load(url, gltf => {
           gltf.scene.position.set(0, 0, 0);
           scene.add(gltf.scene);
+          showError("✅ 模型載入成功");
         }, undefined, err => {
           console.error("載入模型失敗", err);
-          alert("載入模型失敗，請確認 URL 是否正確");
+          showError("❌ 模型載入失敗，可能是 CORS 限制或網址錯誤");
         });
       }
 
