--- a/project-metaverse.html
+++ b/project-metaverse.html
@@ -1,179 +1,154 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>元宇宙專案 - 區塊鏈學習平台</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
+  <style>
+    body { margin: 0; background: #000; overflow: hidden; font-family: Arial; }
+    main { width: 100%; height: 100vh; position: relative; }
+    #ui { position: absolute; top: 10px; left: 10px; z-index: 10; }
+    #ui button { margin: 5px; padding: 8px 12px; cursor: pointer; }
+    #fileInput { display: none; }
+    canvas { display: block; }
+  </style>
 </head>
 <body>
-  <header class="navbar">
-    <div class="logo">區塊鏈學習平台</div>
-    <nav>
-      <ul>
-        <li><a href="index.html">首頁</a></li>
-        <li><a href="lessons.html">課程</a></li>
-        <li><a href="simulate.html">模擬器</a></li>
-        <li><a href="project.html" class="active">專案</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h1>元宇宙專案</h1>
-    <p>探索並建立你的 3D 虛擬世界，支援方向鍵移動與載入 Sketchfab 模型。</p>
-  </section>
-
-  <main style="margin:auto; padding:20px; text-align:center;">
-    <canvas id="metaverse"></canvas>
-    <div style="margin-top:15px;">
+  <main id="scene-container">
+    <div id="ui">
       <button id="btnCube">新增立方體</button>
       <button id="btnSphere">新增球體</button>
-      <input type="text" id="modelUrl" placeholder="輸入 Sketchfab glTF 模型 URL" style="width:300px;">
-      <button id="btnLoad">載入模型</button>
+      <button id="btnModel">載入模型</button>
+      <input type="file" id="fileInput" accept=".gltf,.glb" />
       <button id="btnReset">重設視角</button>
     </div>
-
-    <p id="errorMsg" style="color:red; font-weight:bold; margin-top:10px;"></p>
-
-    <h2 style="margin-top:30px;">Sketchfab 模型範例</h2>
-    <div id="sampleContainer" style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:15px;"></div>
   </main>
 
-  <footer>
-    <p>© 2025 區塊鏈學習平台 | 由 徐文志 製作</p>
-  </footer>
+  <script type="module">
+    import * as THREE from './three.module.js';
+    import { OrbitControls } from './OrbitControls.js';
+    import { GLTFLoader } from './GLTFLoader.js';
 
-  <script>
-    window.onload = () => {
-      const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("metaverse"), antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight * 0.7);
+    const container = document.getElementById("scene-container");
 
-      const light = new THREE.DirectionalLight(0xffffff, 1);
-      light.position.set(5, 10, 7.5);
-      scene.add(light);
+    // === 初始化場景 ===
+    const scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x000000);
 
-      const planeGeo = new THREE.PlaneGeometry(50, 50);
-      const planeMat = new THREE.MeshStandardMaterial({ color: 0x444444 });
-      const plane = new THREE.Mesh(planeGeo, planeMat);
-      plane.rotation.x = -Math.PI / 2;
-      scene.add(plane);
+    const camera = new THREE.PerspectiveCamera(
+      75,
+      container.clientWidth / container.clientHeight,
+      0.1,
+      1000
+    );
+    camera.position.set(0, 2, 5);
 
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(container.clientWidth, container.clientHeight);
+    container.appendChild(renderer.domElement);
+
+    // 光源
+    const light = new THREE.DirectionalLight(0xffffff, 1);
+    light.position.set(5, 10, 7.5);
+    scene.add(light);
+
+    // 地板
+    const plane = new THREE.Mesh(
+      new THREE.PlaneGeometry(50, 50),
+      new THREE.MeshStandardMaterial({ color: 0x222222 })
+    );
+    plane.rotation.x = -Math.PI / 2;
+    scene.add(plane);
+
+    // 相機控制
+    const controls = new OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
+
+    // === 新增立方體 ===
+    function addCube() {
+      const cube = new THREE.Mesh(
+        new THREE.BoxGeometry(1, 1, 1),
+        new THREE.MeshStandardMaterial({ color: Math.random() * 0xffffff })
+      );
+      cube.position.set((Math.random() - 0.5) * 10, 0.5, (Math.random() - 0.5) * 10);
+      scene.add(cube);
+    }
+
+    // === 新增球體 ===
+    function addSphere() {
+      const sphere = new THREE.Mesh(
+        new THREE.SphereGeometry(0.5, 32, 32),
+        new THREE.MeshStandardMaterial({ color: Math.random() * 0xffffff })
+      );
+      sphere.position.set((Math.random() - 0.5) * 10, 0.5, (Math.random() - 0.5) * 10);
+      scene.add(sphere);
+    }
+
+    // === 載入模型 ===
+    const loader = new GLTFLoader();
+    document.getElementById("btnModel").addEventListener("click", () => {
+      document.getElementById("fileInput").click();
+    });
+
+    document.getElementById("fileInput").addEventListener("change", (event) => {
+      const file = event.target.files[0];
+      if (!file) return;
+
+      const url = URL.createObjectURL(file);
+      loader.load(
+        url,
+        (gltf) => {
+          const model = gltf.scene;
+          model.position.set(0, 0, 0);
+          model.scale.set(1, 1, 1);
+          scene.add(model);
+        },
+        undefined,
+        (err) => console.error("❌ 模型載入失敗", err)
+      );
+    });
+
+    // === 重設視角 ===
+    function resetCamera() {
       camera.position.set(0, 2, 5);
-      const controls = new THREE.OrbitControls(camera, renderer.domElement);
+      controls.target.set(0, 0, 0);
+      controls.update();
+    }
 
-      const keys = {};
-      document.addEventListener("keydown", e => keys[e.key] = true);
-      document.addEventListener("keyup", e => keys[e.key] = false);
+    document.getElementById("btnCube").addEventListener("click", addCube);
+    document.getElementById("btnSphere").addEventListener("click", addSphere);
+    document.getElementById("btnReset").addEventListener("click", resetCamera);
 
-      // === 預設模型 (即使 API 失敗也能看到效果) ===
-      const defaultGeo = new THREE.BoxGeometry(1, 1, 1);
-      const defaultMat = new THREE.MeshStandardMaterial({ color: 0x00ffcc });
-      const defaultCube = new THREE.Mesh(defaultGeo, defaultMat);
-      defaultCube.position.set(0, 0.5, 0);
-      scene.add(defaultCube);
+    // === 鍵盤移動 ===
+    const keys = {};
+    document.addEventListener("keydown", (e) => {
+      keys[e.key] = true;
+      if (["ArrowUp", "ArrowDown", "ArrowLeft", "ArrowRight"].includes(e.key))
+        e.preventDefault();
+    });
+    document.addEventListener("keyup", (e) => (keys[e.key] = false));
 
-      function addCube() {
-        const geometry = new THREE.BoxGeometry(1, 1, 1);
-        const material = new THREE.MeshStandardMaterial({ color: Math.random() * 0xffffff });
-        const cube = new THREE.Mesh(geometry, material);
-        cube.position.set(Math.random() * 4 - 2, 0.5, Math.random() * 4 - 2);
-        scene.add(cube);
-      }
+    // === 畫面更新 ===
+    function animate() {
+      requestAnimationFrame(animate);
+      const speed = 0.1;
+      if (keys["ArrowUp"]) camera.position.z -= speed;
+      if (keys["ArrowDown"]) camera.position.z += speed;
+      if (keys["ArrowLeft"]) camera.position.x -= speed;
+      if (keys["ArrowRight"]) camera.position.x += speed;
 
-      function addSphere() {
-        const geometry = new THREE.SphereGeometry(0.5, 32, 32);
-        const material = new THREE.MeshStandardMaterial({ color: Math.random() * 0xffffff });
-        const sphere = new THREE.Mesh(geometry, material);
-        sphere.position.set(Math.random() * 4 - 2, 0.5, Math.random() * 4 - 2);
-        scene.add(sphere);
-      }
+      controls.update();
+      renderer.render(scene, camera);
+    }
 
-      function showError(msg) {
-        document.getElementById("errorMsg").textContent = msg;
-      }
+    animate();
 
-      function loadModel() {
-        const url = document.getElementById("modelUrl").value.trim();
-        if (!url) {
-          showError("請輸入模型 URL");
-          return;
-        }
-
-        showError("模型載入中...");
-
-        const loader = new THREE.GLTFLoader();
-        loader.load(url, gltf => {
-          gltf.scene.position.set(0, 0, 0);
-          scene.add(gltf.scene);
-          showError("✅ 模型載入成功");
-        }, undefined, err => {
-          console.error("載入模型失敗", err);
-          showError("❌ 模型載入失敗，可能是 CORS 限制或網址錯誤");
-        });
-      }
-
-      function resetCamera() {
-        camera.position.set(0, 2, 5);
-        controls.update();
-      }
-
-      document.getElementById("btnCube").addEventListener("click", addCube);
-      document.getElementById("btnSphere").addEventListener("click", addSphere);
-      document.getElementById("btnLoad").addEventListener("click", loadModel);
-      document.getElementById("btnReset").addEventListener("click", resetCamera);
-
-      const samples = [
-        { name: "模型範例 1", url: "https://example.com/model1.glb" },
-        { name: "模型範例 2", url: "https://example.com/model2.glb" },
-        { name: "模型範例 3", url: "https://example.com/model3.glb" }
-      ];
-
-      const container = document.getElementById("sampleContainer");
-      samples.forEach(sample => {
-        const card = document.createElement("div");
-        card.style.width = "200px";
-        card.style.textAlign = "center";
-
-        const img = document.createElement("img");
-        img.src = "https://static.sketchfab.com/img/press/logos/sketchfab-logo.png";
-        img.style.width = "100%";
-        img.style.borderRadius = "8px";
-
-        const p = document.createElement("p");
-        p.textContent = sample.name;
-
-        const btn = document.createElement("button");
-        btn.textContent = "使用此模型";
-        btn.addEventListener("click", () => {
-          document.getElementById("modelUrl").value = sample.url;
-          loadModel();
-        });
-
-        card.appendChild(img);
-        card.appendChild(p);
-        card.appendChild(btn);
-        container.appendChild(card);
-      });
-
-      function animate() {
-        requestAnimationFrame(animate);
-        if (keys['ArrowUp']) camera.position.z -= 0.1;
-        if (keys['ArrowDown']) camera.position.z += 0.1;
-        if (keys['ArrowLeft']) camera.position.x -= 0.1;
-        if (keys['ArrowRight']) camera.position.x += 0.1;
-        if (keys['q']) camera.position.y -= 0.1;
-        if (keys['e']) camera.position.y += 0.1;
-        renderer.render(scene, camera);
-      }
-
-      animate();
-    };
+    // 視窗大小變化
+    window.addEventListener("resize", () => {
+      camera.aspect = container.clientWidth / container.clientHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(container.clientWidth, container.clientHeight);
+    });
   </script>
 </body>
 </html>
